--- a/styles.css
+++ b/styles.css
@@ -4,45 +4,65 @@ body {
   background:linear-gradient(141deg, #ccc 25%, #eee 40%, #ddd 55%);
   color:#555;
   font-family:'Roboto';
-  overflow:hidden;
-  -webkit-backface-visibility: hidden;
-  -webkit-perspective: 1000;
-  -webkit-transform: translate3d(0,0,0);
+/*  -webkit-perspective: 1000;
+  -webkit-transform: translate3d(0,0,0);*/
 }
 
 
-div{
+/*div{
   transition: all 0.1s;
 }
+*/
 
-.containerAfter
-{
-  text-align: start;
-  padding-top: 1vh;
-  overflow: hidden;
-}
 
-.container
+
+
+.page-one
 {
-  text-align:center;
+  /*text-align:center;*/
   font-weight:300;
   font-size:56px;
   padding-top:40vh;
   height:100vh;
+  -webkit-transition: all 1s ease;
+     -moz-transition: all 1s ease;
+      -ms-transition: all 1s ease;
+       -o-transition: all 1s ease;
+          transition: all 1s ease;
+}
 
+.goup
+{
+  padding-top: 1vh;
+  font-size: 3vw;
+}
+
+.goleft
+{
+  padding-left: 2vw !important;
+}
+
+.slideleft
+{
+  animation: slidein 1s  !important;
+  animation-fill-mode: forwards  !important; 
 }
 
 .logo-container {
+  padding-left: 30vw;
   display:inline-block;
   overflow:hidden;
   white-space:nowrap;
+  -webkit-transition: all 1s ease;
+     -moz-transition: all 1s ease;
+      -ms-transition: all 1s ease;
+       -o-transition: all 1s ease;
+          transition: all 1s ease;
   animation: showup 1s ease-in-out;
 }
 
-span
+.logo-span
 {
-  padding: 0px;
-  margin: 0px;
   display: inline-block;
 }
 
@@ -53,7 +73,7 @@ span
   animation: slidein 2s ease 1s;
 }*/
 
-.down-scroll
+.downscroll
 {
   opacity: 0;
   width: 3vw;
@@ -73,33 +93,10 @@ span
 
 .expansion
 {
-  animation: slidein 3s;
+  animation: slideout 3s;
   animation-fill-mode: forwards; /*To retain state after animation.*/
 }
 
-/*.expansion:after 
-{
-  content: "o";
-  width: 0px;
-  animation: newtext 1s ease 3s;
-}*/
-
-/*div:first-of-type {     For increasing performance 
-                       ID/Class should've been used. 
-                       For a small demo 
-                       it's okaish for now 
-  animation: showup 7s infinite;
-}
-
-div:last-of-type {
-  width:0px;
-  animation: reveal 7s;
-}
-
-div:last-of-type span {
-  margin-left:-155px;
-  animation: slidein 7s infinite;
-}*/
 
 @keyframes showup {
     0% {opacity:0; padding-top:3vh;}
@@ -107,6 +104,11 @@ div:last-of-type span {
 }
 
 @keyframes slidein {
+    0% { opacity: 1; width: 250px; }
+    100% { opacity: 0; width: 0px;}
+}
+
+@keyframes slideout {
     0% { opacity: 0; width: 0px;}
     30% { opacity: 0; width: 0px;}
     100% { opacity: 1; width: 250px; }
@@ -118,31 +120,6 @@ div:last-of-type span {
     70% { opacity: 0; padding-top: 20px;}
     100% { opacity: 0; padding-top: 0px; }
 }
-
-@keyframes shrinktotop {
-    0% { opacity: 0; padding-top: 0px;}
-    100% { opacity: 0; padding-top: 0px; }
-}
-
-
-
-
-
-
-
-@keyframes newtext {
-    0% { opacity: 0; width: 0px;}
-    100% { opacity: 1; width: 25px;}
-}
-
-@keyframes reveal {
-    0% {opacity:0;width:155px;}
-    20% {opacity:1;}
-    30% {width:155px;}
-    80% {opacity:1;width:0px;}
-    100% {opacity:0;width:0px;}
-}
-
 
 p {
   font-size:12px;
