--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:300');
 
 body {
-  background:linear-gradient(141deg, #ccc 25%, #eee 40%, #ddd 55%);
-  color:#555;
+  background:#1F2022;
+  color:white;
   font-family:'Roboto';
 /*  -webkit-perspective: 1000;
   -webkit-transform: translate3d(0,0,0);*/
