--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,13 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:300');
 
+html {
+  /*scroll-behavior: smooth;*/
+}
 body {
   background:#1F2022;
   color:white;
   font-family:'Roboto';
+  overflow: hidden;
 /*  -webkit-perspective: 1000;
   -webkit-transform: translate3d(0,0,0);*/
 }
@@ -13,6 +17,7 @@ body {
 .page-one
 {
   /*text-align:center;*/
+  z-index: 2   !important;
   font-weight:300;
   font-size:56px;
   padding-top:40vh;
@@ -52,9 +57,9 @@ body {
 
 .showpage
 {
-  -webkit-animation: showup 1s ease 1s   forwards;
-  -o-animation: showup 1s ease 1s   forwards;
-  animation: showup 1s ease 1s   forwards;
+  -webkit-animation: showup 1s ease 0.3s   forwards;
+  -o-animation: showup 1s ease 0.3s   forwards;
+  animation: showup 1s ease 0.3s   forwards;
 }
 
 .goup
@@ -108,6 +113,31 @@ body {
 {
   width: 100%;
   height: 100%;
+}
+
+.navcontrols
+{
+
+/*  margin-left: auto;
+  margin-top: 20vh;*/
+  z-index: 3;
+  position: fixed;
+  top: 70vh;
+  left:90vw;
+    width: 6vw;
+    height: 13vh;
+}
+
+.up
+{
+  width: 100%;
+  height: 50%;
+  margin-bottom: 1vh;
+}
+.down
+{
+  width: 100%;
+  height: 50%;
 }
 
 
