--- a/styles.css
+++ b/styles.css
@@ -132,12 +132,16 @@ body {
 {
   width: 100%;
   height: 50%;
+  opacity: 0;
   margin-bottom: 1vh;
 }
 .down
 {
   width: 100%;
   height: 50%;
+  opacity: 0;
+  animation: fadeIn 1s ease forwards;
+  animation-delay: 3s;
 }
 
 
@@ -152,6 +156,13 @@ body {
     0% {opacity:0; padding-top:3vh;}
     100% {opacity:1; padding-top:0vh;}
 }
+
+
+@keyframes fadeIn {
+    0% {opacity:0;}
+    100% {opacity:1; animation-delay: 0s;}
+}
+
 
 @keyframes slidein {
     0% { opacity: 1; width: 250px; }
