--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,16 @@ body {
   -webkit-transform: translate3d(0,0,0);*/
 }
 
+a:link {
+  color: white;
+  text-decoration: none;
+}
+
+a:visited {
+  color: white;
+  text-decoration: none;
+}
+
 
 .fixed-top {
   position: fixed;
@@ -19,6 +29,32 @@ body {
   right: 0;
   left: 0;
   z-index: 2;
+}
+
+
+.updates {
+  position: fixed;
+  top: 80vh;
+  right: 30px;
+  z-index: 3;
+  color: black;
+  background: #fff;
+  padding: 10px;
+  border-radius: 3px;
+  opacity: 0;
+  -webkit-animation: flash 2s ease 2s normal infinite;
+  -o-animation: flash 2s ease 2s normal infinite;
+  animation: flash 2s ease 2s normal infinite;
+}
+
+.updates a:link {
+  color: black;
+  text-decoration: none;
+}
+
+.updates a:visited {
+  color: black;
+  text-decoration: none;
 }
 
 
@@ -39,7 +75,12 @@ body {
 
 .subhead
 {
+}
+
+.mainhead
+{
   font-weight: bolder;
+  text-align: center;
 }
 
 .subbody
@@ -108,6 +149,7 @@ body {
        -o-transition: all 1s ease;
           transition: all 1s ease;
   animation: showup 1s ease-in-out;
+  
 }
 
 .logo-span
@@ -257,7 +299,15 @@ body {
 
 @keyframes fadeIn {
     0% {opacity:0;}
-    100% {opacity:1; animation-delay: 0s;}
+    100% {opacity:1;}
+}
+
+
+
+@keyframes flash {
+    0% {opacity:0;}
+    50% {opacity:1;}
+    100% {opacity:0;}
 }
 
 
